fix(Alert): update examples className to v5 so that custom spacing is applied (#9186)

--- a/packages/react-core/src/components/Alert/examples/alert.css
+++ b/packages/react-core/src/components/Alert/examples/alert.css
@@ -1,3 +1,3 @@
-.ws-react-c-alert .pf-c-alert {
+.ws-react-c-alert .pf-v5-c-alert {
   margin-bottom: 21px;
 }
